HTML, CSS, and JS file cleanup

--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ body {
     color: azure;
     font-size: xx-large;
     margin-top: 5px; 
-
 } */
 
 .poem {
@@ -86,5 +85,5 @@ footer {
 }
 
 main {
-    border:rgb(241, 243, 242) solid 1px
+    border:rgb(241, 243, 242) solid 1px;
 }
